nextcloud/traefik-middleware.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-middleware-headers
  namespace: nextcloud
spec:
  headers:
    stsSeconds: 31536000
    stsIncludeSubdomains: true
    stsPreload: true
    sslRedirect: true
--- # This need to be deployed in the same namespace as the running nextcloud instance
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-middleware-regex
  namespace: nextcloud
spec:
  redirectRegex:
    permanent: true
    regex: "https://(.*)/.well-known/(card|cal)dav"
    replacement: "https://${1}/remote.php/dav/"
--- # This need to be deployed in the same namespace as the running nextcloud instance
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-middleware-https
  namespace: nextcloud
spec:
  redirectScheme:
    scheme: https
    permanent: true
