nextcloud/ingress-nextcloud.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ingress-nextcloud
 namespace: default
 annotations:
   cert-manager.io/issuer: "cloudflare-issuer"
spec:
 tls:
   - hosts:
       - "*.thecullensnz.com"
     secretName: letsencrypt-wildcard-cert-thecullensnz.com
 rules:
   - host: "files.thecullensnz.com"
     http:
       paths:
         - path: /
           pathType: Prefix
           backend:
             service:
               name: nextcloud-aio-apache
               port:
                 number: 8443
